gen/SimpleFortranParser.java
// Generated from /home/dimitris/IdeaProjects/Project/src/SimpleFortran.g4 by ANTLR 4.9.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SimpleFortranParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T_FUNCTION=1, T_SUBROUTINE=2, T_END=3, T_COMMON=4, T_INTEGER=5, T_REAL=6, 
		T_COMPLEX=7, T_LOGICAL=8, T_CHARACTER=9, T_STRING=10, T_LIST=11, T_DATA=12, 
		T_CONTINUE=13, T_GOTO=14, T_CALL=15, T_READ=16, T_WRITE=17, T_LENGTH=18, 
		T_NEW=19, T_IF=20, T_THEN=21, T_ELSE=22, T_ENDIF=23, T_DO=24, T_ENDDO=25, 
		T_STOP=26, T_RETURN=27, ID=28, A=29, B=30, C=31, D=32, E=33, F=34, G=35, 
		H=36, I=37, J=38, K=39, L=40, M=41, N=42, O=43, P=44, Q=45, R=46, S=47, 
		T=48, U=49, Y=50, V=51, X=52, W=53, Z=54, L_PAREN=55, R_PAREN=56, COMMA=57, 
		ASSIGN=58, COLON=59, L_BRACK=60, R_BRACK=61, OROP=62, ANDOP=63, NOTOP=64, 
		RELOP=65, ADDOP=66, MULOP=67, DIVOP=68, POWEROP=69, LF=70, FF=71, HT=72, 
		CR=73, BS=74, VT=75, ICONST=76, RCONST=77, LCONST=78, CCONST=79, SCONST=80, 
		LISTFUNC=81, WS=82, COMMENTS=83, END_EOF=84;
	public static final int
		RULE_program = 0, RULE_body = 1, RULE_declarations = 2, RULE_type = 3, 
		RULE_vars = 4, RULE_undef_variable = 5, RULE_listspec = 6, RULE_dims = 7, 
		RULE_dim = 8, RULE_cblock_list = 9, RULE_cblock = 10, RULE_id_list = 11, 
		RULE_vals = 12, RULE_value_list = 13, RULE_values = 14, RULE_value = 15, 
		RULE_repeat = 16, RULE_sign = 17, RULE_constant = 18, RULE_simple_constant = 19, 
		RULE_complex_constant = 20, RULE_statements = 21, RULE_labeled_statement = 22, 
		RULE_label = 23, RULE_statement = 24, RULE_simple_statement = 25, RULE_assignment = 26, 
		RULE_variable = 27, RULE_expressions = 28, RULE_expression = 29, RULE_listexpression = 30, 
		RULE_goto_statement = 31, RULE_labels = 32, RULE_if_statement = 33, RULE_subroutine_call = 34, 
		RULE_io_statement = 35, RULE_read_list = 36, RULE_read_item = 37, RULE_iter_space = 38, 
		RULE_step = 39, RULE_write_list = 40, RULE_write_item = 41, RULE_compound_statement = 42, 
		RULE_branch_statement = 43, RULE_tail = 44, RULE_loop_statement = 45, 
		RULE_subprograms = 46, RULE_subprogram = 47, RULE_header = 48, RULE_formal_parameters = 49;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "body", "declarations", "type", "vars", "undef_variable", 
			"listspec", "dims", "dim", "cblock_list", "cblock", "id_list", "vals", 
			"value_list", "values", "value", "repeat", "sign", "constant", "simple_constant", 
			"complex_constant", "statements", "labeled_statement", "label", "statement", 
			"simple_statement", "assignment", "variable", "expressions", "expression", 
			"listexpression", "goto_statement", "labels", "if_statement", "subroutine_call", 
			"io_statement", "read_list", "read_item", "iter_space", "step", "write_list", 
			"write_item", "compound_statement", "branch_statement", "tail", "loop_statement", 
			"subprograms", "subprogram", "header", "formal_parameters"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, "'('", "')'", "','", "'='", 
			"':'", "'['", "']'", null, null, null, null, null, "'*'", "'/'", "'**'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "T_FUNCTION", "T_SUBROUTINE", "T_END", "T_COMMON", "T_INTEGER", 
			"T_REAL", "T_COMPLEX", "T_LOGICAL", "T_CHARACTER", "T_STRING", "T_LIST", 
			"T_DATA", "T_CONTINUE", "T_GOTO", "T_CALL", "T_READ", "T_WRITE", "T_LENGTH", 
			"T_NEW", "T_IF", "T_THEN", "T_ELSE", "T_ENDIF", "T_DO", "T_ENDDO", "T_STOP", 
			"T_RETURN", "ID", "A", "B", "C", "D", "E", "F", "G", "H", "I", "J", "K", 
			"L", "M", "N", "O", "P", "Q", "R", "S", "T", "U", "Y", "V", "X", "W", 
			"Z", "L_PAREN", "R_PAREN", "COMMA", "ASSIGN", "COLON", "L_BRACK", "R_BRACK", 
			"OROP", "ANDOP", "NOTOP", "RELOP", "ADDOP", "MULOP", "DIVOP", "POWEROP", 
			"LF", "FF", "HT", "CR", "BS", "VT", "ICONST", "RCONST", "LCONST", "CCONST", 
			"SCONST", "LISTFUNC", "WS", "COMMENTS", "END_EOF"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "SimpleFortran.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SimpleFortranParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public BodyContext body() {
			return getRuleContext(BodyContext.class,0);
		}
		public TerminalNode T_END() { return getToken(SimpleFortranParser.T_END, 0); }
		public SubprogramsContext subprograms() {
			return getRuleContext(SubprogramsContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleFortranListener ) ((SimpleFortranListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleFortranListener ) ((SimpleFortranListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimpleFortranVisitor ) return ((SimpleFortranVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			body();
			setState(101);
			match(T_END);
			setState(102);
			subprograms(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BodyContext extends ParserRuleContext {
		public DeclarationsContext declarations() {
			return getRuleContext(DeclarationsContext.class,0);
		}
		public StatementsContext statements() {
			return getRuleContext(StatementsContext.class,0);
		}
		public BodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_body; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleFortranListener ) ((SimpleFortranListener)listener).enterBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleFortranListener ) ((SimpleFortranListener)listener).exitBody(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimpleFortranVisitor ) return ((SimpleFortranVisitor<? extends T>)visitor).visitBody(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BodyContext body() throws RecognitionException {
		BodyContext _localctx = new BodyContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_body);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			declarations(0);
			setState(105);
			statements(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationsContext extends ParserRuleContext {
		public DeclarationsContext declarations() {
			return getRuleContext(DeclarationsContext.class,0);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public VarsContext vars() {
			return getRuleContext(VarsContext.class,0);
		}
		public TerminalNode T_COMMON() { return getToken(SimpleFortranParser.T_COMMON, 0); }
		public Cblock_listContext cblock_list() {
			return getRuleContext(Cblock_listContext.class,0);
		}
		public TerminalNode T_DATA() { return getToken(SimpleFortranParser.T_DATA, 0); }
		public ValsContext vals() {
			return getRuleContext(ValsContext.class,0);
		}
		public DeclarationsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declarations; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleFortranListener ) ((SimpleFortranListener)listener).enterDeclarations(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleFortranListener ) ((SimpleFortranListener)listener).exitDeclarations(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimpleFortranVisitor ) return ((SimpleFortranVisitor<? extends T>)visitor).visitDeclarations(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclarationsContext declarations() throws RecognitionException {
		return declarations(0);
	}

	private DeclarationsContext declarations(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		DeclarationsContext _localctx = new DeclarationsContext(_ctx, _parentState);
		DeclarationsContext _prevctx = _localctx;
		int _startState = 4;
		enterRecursionRule(_localctx, 4, RULE_declarations, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			}
			_ctx.stop = _input.LT(-1);
			setState(120);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(118);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
					case 1:
						{
						_localctx = new DeclarationsContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_declarations);
						setState(108);
						if (!(precpred(_ctx, 4))) throw new FailedPredicateException(this, "precpred(_ctx, 4)");
						setState(109);
						type();
						setState(110);
						vars(0);
						}
						break;
					case 2:
						{
						_localctx = new DeclarationsContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_declarations);
						setState(112);
						if (!(precpred(_ctx, 3))) throw new FailedPredicateException(this, "precpred(_ctx, 3)");
						setState(113);
						match(T_COMMON);
						setState(114);
						cblock_list(0);
						}
						break;
					case 3:
						{
						_localctx = new DeclarationsContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_declarations);
						setState(115);
						if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
						setState(116);
						match(T_DATA);
						setState(117);
						vals(0);
						}
						break;
					}
					} 
				}
				setState(122);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public TerminalNode T_INTEGER() { return getToken(SimpleFortranParser.T_INTEGER, 0); }
		public TerminalNode T_REAL() { return getToken(SimpleFortranParser.T_REAL, 0); }
		public TerminalNode T_COMPLEX() { return getToken(SimpleFortranParser.T_COMPLEX, 0); }
		public TerminalNode T_LOGICAL() { return getToken(SimpleFortranParser.T_LOGICAL, 0); }
		public TerminalNode T_CHARACTER() { return getToken(SimpleFortranParser.T_CHARACTER, 0); }
		public TerminalNode T_STRING() { return getToken(SimpleFortranParser.T_STRING, 0); }
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleFortranListener ) ((SimpleFortranListener)listener).enterType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleFortranListener ) ((SimpleFortranListener)listener).exitType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimpleFortranVisitor ) return ((SimpleFortranVisitor<? extends T>)visitor).visitType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_type);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(123);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T_INTEGER) | (1L << T_REAL) | (1L << T_COMPLEX) | (1L << T_LOGICAL) | (1L << T_CHARACTER) | (1L << T_STRING))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarsContext extends ParserRuleContext {
		public Undef_variableContext undef_variable() {
			return getRuleContext(Undef_variableContext.class,0);
		}
		public VarsContext vars() {
			return getRuleContext(VarsContext.class,0);
		}
		public TerminalNode COMMA() { return getToken(SimpleFortranParser.COMMA, 0); }
		public VarsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_vars; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleFortranListener ) ((SimpleFortranListener)listener).enterVars(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleFortranListener ) ((SimpleFortranListener)listener).exitVars(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimpleFortranVisitor ) return ((SimpleFortranVisitor<? extends T>)visitor).visitVars(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VarsContext vars() throws RecognitionException {
		return vars(0);
	}

	private VarsContext vars(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		VarsContext _localctx = new VarsContext(_ctx, _parentState);
		VarsContext _prevctx = _localctx;
		int _startState = 8;
		enterRecursionRule(_localctx, 8, RULE_vars, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(126);
			undef_variable();
			}
			_ctx.stop = _input.LT(-1);
			setState(133);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new VarsContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_vars);
					setState(128);
					if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
					setState(129);
					match(COMMA);
					setState(130);
					undef_variable();
					}
					} 
				}
				setState(135);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class Undef_variableContext extends ParserRuleContext {
		public ListspecContext listspec() {
			return getRuleContext(ListspecContext.class,0);
		}
		public TerminalNode ID() { return getToken(SimpleFortranParser.ID, 0); }
		public TerminalNode L_PAREN() { return getToken(SimpleFortranParser.L_PAREN, 0); }
		public DimsContext dims() {
			return getRuleContext(DimsContext.class,0);
		}
		public TerminalNode R_PAREN() { return getToken(SimpleFortranParser.R_PAREN, 0); }
		public Undef_variableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_undef_variable; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleFortranListener ) ((SimpleFortranListener)listener).enterUndef_variable(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleFortranListener ) ((SimpleFortranListener)listener).exitUndef_variable(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimpleFortranVisitor ) return ((SimpleFortranVisitor<? extends T>)visitor).visitUndef_variable(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Undef_variableContext undef_variable() throws RecognitionException {
		Undef_variableContext _localctx = new Undef_variableContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_undef_variable);
		try {
			setState(145);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(136);
				listspec();
				setState(137);
				match(ID);
				setState(138);
				match(L_PAREN);
				setState(139);
				dims(0);
				setState(140);
				match(R_PAREN);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(142);
				listspec();
				setState(143);
				match(ID);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ListspecContext extends ParserRuleContext {
		public TerminalNode T_LIST() { return getToken(SimpleFortranParser.T_LIST, 0); }
		public ListspecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listspec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleFortranListener ) ((SimpleFortranListener)listener).enterListspec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleFortranListener ) ((SimpleFortranListener)listener).exitListspec(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimpleFortranVisitor ) return ((SimpleFortranVisitor<? extends T>)visitor).visitListspec(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ListspecContext listspec() throws RecognitionException {
		ListspecContext _localctx = new ListspecContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_listspec);
		try {
			setState(149);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T_LIST:
				enterOuterAlt(_localctx, 1);
				{
				setState(147);
				match(T_LIST);
				}
				break;
			case T_FUNCTION:
			case ID:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DimsContext extends ParserRuleContext {
		public DimContext dim() {
			return getRuleContext(DimContext.class,0);
		}
		public DimsContext dims() {
			return getRuleContext(DimsContext.class,0);
		}
		public TerminalNode COMMA() { return getToken(SimpleFortranParser.COMMA, 0); }
		public DimsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dims; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleFortranListener ) ((SimpleFortranListener)listener).enterDims(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleFortranListener ) ((SimpleFortranListener)listener).exitDims(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimpleFortranVisitor ) return ((SimpleFortranVisitor<? extends T>)visitor).visitDims(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DimsContext dims() throws RecognitionException {
		return dims(0);
	}
